--- a/static/css/work5.css
+++ b/static/css/work5.css
@@ -76,14 +76,14 @@ li {
 }
 
 .book-item {
-    display: inline-block;
-    flex-direction: column;
-    margin-right: 30px;
-    padding: 10px;
-    margin: 0 5px;
+    /* display: inline-block; */
+    /* flex-direction: column; */
+    /* margin-right: 30px; */
+    /* padding: 10px; */
+    /* margin: 0 5px; */
     background-color: rgb(250, 243, 243);
     text-align: center;
-    flex: 1;
+    /* flex: 1; */
 }
 
 .book-link {
@@ -223,9 +223,9 @@ textarea {
 }
 
 .book-block {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: flex;
+    /* margin-top: 10px; */
+    /* margin-bottom: 10px; */
+    /* display: flex; */
 }
 
 .price {
