--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -5,78 +5,99 @@
     <meta charset="utf-8">
     <title>КНИЖНАЯ КЛАССИКА</title>
     <link rel="stylesheet" type="text/css" href="/static/css/work5.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="logo-mag">
-                <a class="logo-link" href="/">
-                    <img class="logo" src="/static/img/1.png">
-                </a>
-                Книжная классика
-            </div>
-            <div>
-                <ul class="menu">
-                    <li class="menu-link">
-                        <a href="/">Главная</a>
-                    </li>
-                    <li class="menu-link">
-                        <a href="/catalog">Каталог</a>
-                    </li>
-                    <li class="menu-link">
-                        <a href="/contacts">Контакты</a>
-                    </li>
-                </ul>
-            </div>
+<div class="container">
+    <div class="header">
+        <div class="logo-mag">
+            <a class="logo-link" href="/">
+                <img class="logo" src="/static/img/1.png">
+            </a>
+            Книжная классика
         </div>
-        <div class="main-content">
-            <h1 class="title-catalog">Что у нас можно купить</h1>
-            <ul class="catalog-menu">
-                <li><a href="/catalog">Все книги</a></li>
-                <li><a href="rusclassic.html">Русская классика</a></li>
-                <li><a href="amclassic.html">Американская классика</a></li>
+        <div>
+            <ul class="menu">
+                <li class="menu-link">
+                    <a href="/">Главная</a>
+                </li>
+                <li class="menu-link">
+                    <a href="/catalog">Каталог</a>
+                </li>
+                <li class="menu-link">
+                    <a href="/contacts">Контакты</a>
+                </li>
             </ul>
-            <div class="common-book">
-                <div class="book-block">
-                    <div class="book-item">
-                        <a href="voyna i mir.html" class="book-link"><img class="book-img" src="/static/img/2-2.jpg"></a>
-                        <h2 class="book-title">Лев Толстой<br>"Война и мир"</h2>
-                    </div>
-                    <div class="book-item">
-                        <a href="capitan.html" class="book-link"><img class="book-img" src="/static/img/cap.jpg"></a>
-                        <h2 class="book-title">Александр Пушкин<br> "Капитанская дочка"</h2>
-                    </div>
-                    <div class="book-item">
-                        <a href="mice.html" class="book-link"><img class="book-img" src="/static/img/mice.jpeg"></a>
-                        <h2 class="book-title">Джон Стейнбек<br>"О мышах и людях"</h2>
-                    </div>
-                    <div class="book-item">
-                        <a href="nadprop.html" class="book-link"><img class="book-img" src="/static/img/nadprop.jpg"></a>
-                        <h2 class="book-title">Джером Д.Сэлинджер<br>"Над пропастью во ржи"</h2>
-                    </div>
-                </div>
-                <div class="book-block">
-                    <div class="book-item">
-                        <a href="prest_nakaz.html" class="book-link"><img class="book-img" src="/static/img/nakaz.jpg"></a>
-                        <h2 class="book-title">Фёдор Достоевский<br>"Преступление и наказание"</h2>
-                    </div>
-                    <div class="book-item">
-                        <a href="kill.html" class="book-link"><img class="book-img" src="/static/img/kill.jpeg"></a>
-                        <h2 class="book-title">Харпер Ли<br>"Убить пересмешника"</h2>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="footer-bottom">
-            <div class="footer-item">
-                <ul class="footer-copy">
-                    <li>&copy;Все права защищены</li>
-                </ul>
+    <div class="main-content">
+        <h1 class="title-catalog">Что у нас можно купить</h1>
+        <ul class="catalog-menu">
+            <li><a href="/catalog">Все книги</a></li>
+            <li><a href="rusclassic.html">Русская классика</a></li>
+            <li><a href="amclassic.html">Американская классика</a></li>
+        </ul>
+        <div class="common-book">
+            <div class="book-block">
+                <div class="row">
+                    <div class="col-xl-3 col-md-4 col-sm-6">
+                        <div class="book-item">
+                            <a href="capitan.html" class="book-link"><img class="book-img"
+                                                                          src="/static/img/cap.jpg"></a>
+                            <h2 class="book-title">Александр Пушкин<br> "Капитанская дочка"</h2>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-4 col-sm-6">
+                        <div class="book-item">
+                            <a href="mice.html" class="book-link"><img class="book-img" src="/static/img/mice.jpeg"></a>
+                            <h2 class="book-title">Джон Стейнбек<br>"О мышах и людях"</h2>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-4 col-sm-6">
+                        <div class="book-item">
+                            <a href="nadprop.html" class="book-link"><img class="book-img"
+                                                                          src="/static/img/nadprop.jpg"></a>
+                            <h2 class="book-title">Джером Д.Сэлинджер<br>"Над пропастью во ржи"</h2>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-4 col-sm-6">
+                        <div class="book-block">
+                            <div class="book-item">
+                                <a href="prest_nakaz.html" class="book-link"><img class="book-img"
+                                                                                  src="/static/img/nakaz.jpg"></a>
+                                <h2 class="book-title">Фёдор Достоевский<br>"Преступление и наказание"</h2>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-3 col-md-4 col-sm-6">
+                        <div class="book-item">
+                            <a href="voyna i mir.html" class="book-link"><img class="book-img"
+                                                                              src="/static/img/2-2.jpg"></a>
+                            <h2 class="book-title">Лев Толстой<br>"Война и мир"</h2>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-4 col-sm-6">
+                        <div class="book-item">
+                            <a href="kill.html" class="book-link"><img class="book-img"
+                                                                       src="/static/img/kill.jpeg"></a>
+                            <h2 class="book-title">Харпер Ли<br>"Убить пересмешника"</h2>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <script type="text/javascript">
+            <div class="footer">
+                <div class="footer-bottom">
+                    <div class="footer-item">
+                        <ul class="footer-copy">
+                            <li>&copy;Все права защищены</li>
+                        </ul>
+                    </div>
+                    <script type="text/javascript">
                 (function() {
                     if (window.pluso)
                         if (typeof window.pluso.start == "function") return;
@@ -93,43 +114,56 @@
                         h.appendChild(s);
                     }
                 })();
-            </script>
-            <div class="pluso footer-item" data-background="transparent" data-options="small,square,line,horizontal,nocounter,theme=06" data-services="vkontakte,odnoklassniki,facebook,pinterest"></div>
-            <div class="footer-item"></div>
-        </div>
 
-        <div class="footer-top">
-            <div class="footer-item">
-                Свяжитесь с нами
-                <ul class="footer-list">
-                    <li>+7(812)3325566</li>
-                    <li>Санкт-Петербург, Лиговский проспект, дом 116</li>
-                    <li><a href="mailto:superbooks@gmail.com">superbooks@gmail.com</a></li>
-                </ul>
-            </div>
-            <div class="footer-item">
-                Полезная информация
-                <ul class="footer-list">
-                    <li>
-                        <a href="/">Отдел продаж</a>
-                    </li>
-                    <li>
-                        <a href="/">Поддержка клиентов</a>
-                    </li>
-                    <li>
-                        <a href="/">Доставка</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-item">
-                <ul class="footer-list">
-                    <li>Карьера у нас</li>
-                    <li>Обмен и возврат</li>
-                </ul>
+
+
+
+
+
+                    </script>
+                    <div class="pluso footer-item" data-background="transparent"
+                         data-options="small,square,line,horizontal,nocounter,theme=06"
+                         data-services="vkontakte,odnoklassniki,facebook,pinterest"></div>
+                    <div class="footer-item"></div>
+                </div>
+
+                <div class="footer-top">
+                    <div class="footer-item">
+                        Свяжитесь с нами
+                        <ul class="footer-list">
+                            <li>+7(812)3325566</li>
+                            <li>Санкт-Петербург, Лиговский проспект, дом 116</li>
+                            <li><a href="mailto:superbooks@gmail.com">superbooks@gmail.com</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-item">
+                        Полезная информация
+                        <ul class="footer-list">
+                            <li>
+                                <a href="/">Отдел продаж</a>
+                            </li>
+                            <li>
+                                <a href="/">Поддержка клиентов</a>
+                            </li>
+                            <li>
+                                <a href="/">Доставка</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-item">
+                        <ul class="footer-list">
+                            <li>Карьера у нас</li>
+                            <li>Обмен и возврат</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    </div>
+</div>
+</div>
+</div>
+</div>
 </body>
 
 </html>
