--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -67,7 +67,7 @@
             </table>
             <h2>Мы на карте</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1999.8270770728575!2d30.350954851716136!3d59.91841717060275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469631b30ae2112d%3A0x709838e29ab0ceba!2z0JvQuNCz0L7QstGB0LrQuNC5INC_0YAuLCAxMTYsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExMTk!5e0!3m2!1sru!2sru!4v1528049533763"
-                width="1200" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
             <div class="footer">
                 <div class="footer-bottom">
