--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -36,8 +36,8 @@
         <h1 class="title-catalog">Что у нас можно купить</h1>
         <ul class="catalog-menu">
             <li><a href="/catalog">Все книги</a></li>
-            <li><a href="rusclassic.html">Русская классика</a></li>
-            <li><a href="amclassic.html">Американская классика</a></li>
+            <li><a href="/rusclassic">Русская классика</a></li>
+            <li><a href="/amclassic">Американская классика</a></li>
         </ul>
         <div class="common-book">
                 <div class="row">
