--- a/mainapp/templates/mainapp/amclassic.html
+++ b/mainapp/templates/mainapp/amclassic.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="logo-mag">
             <a class="logo-link" href="/">
-                <img class="logo" src="static/img/1.png">
+                <img class="logo" src="/static/img/1.png">
             </a>
             Книжная классика
         </div>
