--- a/mainapp/templates/mainapp/amclassic.html
+++ b/mainapp/templates/mainapp/amclassic.html
@@ -19,17 +19,7 @@
             Книжная классика
         </div>
         <div>
-            <ul class="menu">
-                <li class="menu-link">
-                    <a href="/">Главная</a>
-                </li>
-                <li class="menu-link">
-                    <a href="/catalog">Каталог</a>
-                </li>
-                <li class="menu-link">
-                    <a href="/contacts">Контакты</a>
-                </li>
-            </ul>
+      {% include "mainapp/includes/inc_menu.html" %}
         </div>
     </div>
     <div class="main-content">
