--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -19,17 +19,7 @@
             Книжная классика
         </div>
         <div>
-            <ul class="menu">
-                <li class="menu-link">
-                    <a href="/">Главная</a>
-                </li>
-                <li class="menu-link">
-                    <a href="/catalog">Каталог</a>
-                </li>
-                <li class="menu-link">
-                    <a href="/contacts">Контакты</a>
-                </li>
-            </ul>
+           {% include "mainapp/includes/inc_menu.html" %}
         </div>
     </div>
     <div class="main-content">
@@ -43,20 +33,20 @@
                 <div class="row">
                     <div class="col-xl-3 col-md-4 col-sm-6">
                         <div class="book-item">
-                            <a href="capitan.html" class="book-link"><img class="book-img"
+                            <a href="/capitan" class="book-link"><img class="book-img"
                                                                           src="/static/img/cap.jpg"></a>
                             <h2 class="book-title">Александр Пушкин<br> "Капитанская дочка"</h2>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-4 col-sm-6">
                         <div class="book-item">
-                            <a href="mice.html" class="book-link"><img class="book-img" src="/static/img/mice.jpeg"></a>
+                            <a href="/mice" class="book-link"><img class="book-img" src="/static/img/mice.jpeg"></a>
                             <h2 class="book-title">Джон Стейнбек<br>"О мышах и людях"</h2>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-4 col-sm-6">
                         <div class="book-item">
-                            <a href="nadprop.html" class="book-link"><img class="book-img"
+                            <a href="/nadprop" class="book-link"><img class="book-img"
                                                                           src="/static/img/nadprop.jpg"></a>
                             <h2 class="book-title">Джером Д.Сэлинджер<br>"Над пропастью во ржи"</h2>
                         </div>
@@ -64,7 +54,7 @@
                     <div class="col-xl-3 col-md-4 col-sm-6">
                         <div class="book-block">
                             <div class="book-item">
-                                <a href="prest_nakaz.html" class="book-link"><img class="book-img"
+                                <a href="/prest_nakaz" class="book-link"><img class="book-img"
                                                                                   src="/static/img/nakaz.jpg"></a>
                                 <h2 class="book-title">Фёдор Достоевский<br>"Преступление и наказание"</h2>
                             </div>
@@ -75,14 +65,14 @@
                 <div class="row">
                     <div class="col-xl-3 col-md-4 col-sm-6">
                         <div class="book-item">
-                            <a href="voyna i mir.html" class="book-link"><img class="book-img"
+                            <a href="/voyna i mir" class="book-link"><img class="book-img"
                                                                               src="/static/img/2-2.jpg"></a>
                             <h2 class="book-title">Лев Толстой<br>"Война и мир"</h2>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-4 col-sm-6">
                         <div class="book-item">
-                            <a href="kill.html" class="book-link"><img class="book-img"
+                            <a href="/kill" class="book-link"><img class="book-img"
                                                                        src="/static/img/kill.jpeg"></a>
                             <h2 class="book-title">Харпер Ли<br>"Убить пересмешника"</h2>
                         </div>
