--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -18,19 +18,7 @@
                 </a>
                 Книжная классика
             </div>
-            <div>
-                <ul class="menu">
-                    <li class="menu-link">
-                        <a href="/">Главная</a>
-                    </li>
-                    <li class="menu-link">
-                        <a href="/catalog">Каталог</a>
-                    </li>
-                    <li class="menu-link">
-                        <a href="/contacts">Контакты</a>
-                    </li>
-                </ul>
-            </div>
+            {% include "mainapp/includes/inc_menu.html" %}
         </div>
         <hr>
         <div class="main-content">
