--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
 
-<link rel="stylesheet" type="text/css" href="/static/css/title.css">
-<link rel="stylesheet" type="text/css" href="/static/css/menu.css">
+<link rel="stylesheet" href="{% static 'css/work5.css' %}">
+<link rel="stylesheet" href="{% static 'css/menu.css' %}">
 </head>
 
 <head>
