--- a/mainapp/templates/mainapp/nadprop.html
+++ b/mainapp/templates/mainapp/nadprop.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
 
 <head>
     <meta charset="utf-8">
     <title>КНИЖНАЯ КЛАССИКА</title>
-    <link rel="stylesheet" type="text/css" href="work5.css">
+    <link rel="stylesheet" href="{% static 'css/work5.css' %}">
 </head>
 
 <body>
