--- a/mainapp/templates/mainapp/prest_nakaz.html
+++ b/mainapp/templates/mainapp/prest_nakaz.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
 
 <head>
     <meta charset="utf-8">
     <title>КНИЖНАЯ КЛАССИКА</title>
-    <link rel="stylesheet" type="text/css" href="work5.css">
+    <link rel="stylesheet" href="{% static 'css/work5.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 
 <body>
