--- a/mainapp/templates/mainapp/includes/inc_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_menu.html
@@ -1,7 +1,7 @@
 <div>
                 <ul class="menu">
                     <li class="menu-link">
-                        <a href="/">Главная</a>
+                        <a href="{% url 'main' %}">Главная</a>
                     </li>
                     <li class="menu-link">
                         <a href="{% url 'catalog' %}">Каталог</a>
