--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -22,6 +22,7 @@
             {% include "mainapp/includes/inc_menu.html" %}
         </div>
         <hr>
+        <h1>Привет, {{ username | title }}</h1>
         <div class="main-content">
             <p>Покупайте лучшие книги по лучшей цене</p>
         </div>
