--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -59,66 +59,4 @@
             <h2>Мы на карте</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1999.8270770728575!2d30.350954851716136!3d59.91841717060275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469631b30ae2112d%3A0x709838e29ab0ceba!2z0JvQuNCz0L7QstGB0LrQuNC5INC_0YAuLCAxMTYsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExMTk!5e0!3m2!1sru!2sru!4v1528049533763"
                 width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-            <div class="footer">
-                <div class="footer-bottom">
-                    <div class="footer-item">
-                        <ul class="footer-copy">
-                            <li>&copy;Все права защищены</li>
-                        </ul>
-                    </div>
-                    <script type="text/javascript">
-                        (function() {
-                            if (window.pluso)
-                                if (typeof window.pluso.start == "function") return;
-                            if (window.ifpluso == undefined) {
-                                window.ifpluso = 1;
-                                var d = document,
-                                    s = d.createElement('script'),
-                                    g = 'getElementsByTagName';
-                                s.type = 'text/javascript';
-                                s.charset = 'UTF-8';
-                                s.async = true;
-                                s.src = ('https:' == window.location.protocol ? 'https' : 'http') + '://share.pluso.ru/pluso-like.js';
-                                var h = d[g]('body')[0];
-                                h.appendChild(s);
-                            }
-                        })();
-                    </script>
-                    <div class="pluso footer-item" data-background="transparent" data-options="small,square,line,horizontal,nocounter,theme=06" data-services="vkontakte,odnoklassniki,facebook,pinterest"></div>
-                    <div class="footer-item"></div>
-                </div>
-
-                <div class="footer-top">
-                    <div class="footer-item">
-                        Свяжитесь с нами
-                        <ul class="footer-list">
-                            <li>+7(812)3325566</li>
-                            <li>Санкт-Петербург, Лиговский проспект, дом 116</li>
-                            <li>
-                                <a href="mailto:superbooks@gmail.com">superbooks@gmail.com</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-item">
-                        Полезная информация
-                        <ul class="footer-list">
-                            <li>
-                                <a href="/">Отдел продаж</a>
-                            </li>
-                            <li>
-                                <a href="/">Поддержка клиентов</a>
-                            </li>
-                            <li>
-                                <a href="/">Доставка</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-item">
-                        <ul class="footer-list">
-                            <li>Карьера у нас</li>
-                            <li>Обмен и возврат</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            {% include "mainapp/includes/inc_footer.html" %}
