--- a/mainapp/templates/mainapp/voyna_i_mir.html
+++ b/mainapp/templates/mainapp/voyna_i_mir.html
@@ -49,6 +49,8 @@
                 </div>
                 {% include "mainapp/includes/inc_footer.html" %}
             </div>
+        </div>
+    </div>
 </body>
 
 </html>
