--- a/mainapp/templates/mainapp/nadprop.html
+++ b/mainapp/templates/mainapp/nadprop.html
@@ -6,14 +6,16 @@
     <meta charset="utf-8">
     <title>КНИЖНАЯ КЛАССИКА</title>
     <link rel="stylesheet" href="{% static 'css/work5.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
             <div class="logo-mag">
-                <a class="logo-link" href="index.html">
-                    <img class="logo" src="images/1.png">
+                <a class="logo-link" href="/">
+                    <img class="logo" src="static/img/1.png">
                 </a>
                 Книжная классика
             </div>
@@ -23,17 +25,17 @@
         </div>
         <div class="main-content">
             <ul class="catalog-menu">
-                <li><a href="catalog.html">Все книги</a></li>
-                <li><a href="rusclassic.html">Русская классика</a></li>
-                <li><a href="amclassic.html">Американская классика</a></li>
+                <li><a href="/catalog">Все книги</a></li>
+                <li><a href="/rusclassic">Русская классика</a></li>
+                <li><a href="/amclassic">Американская классика</a></li>
             </ul>
             <div>
 
                 <div class="productinfo">
                     <div>
 
-                        <a href="images/nadprop.jpg" target="_blank">
-                            <img src="images/nadprop.jpg" height="200">
+                        <a href="static/img/nadprop.jpg" target="_blank">
+                            <img src="static/img/nadprop.jpg" height="200">
                         </a>
                     </div>
                     <div>
