--- a/mainapp/templates/mainapp/prest_nakaz.html
+++ b/mainapp/templates/mainapp/prest_nakaz.html
@@ -14,8 +14,8 @@
     <div class="container">
         <div class="header">
             <div class="logo-mag">
-                <a class="logo-link" href="index.html">
-                    <img class="logo" src="images/1.png">
+                <a class="logo-link" href="/">
+                    <img class="logo" src="static/img/1.png">
                 </a>
                 Книжная классика
             </div>
@@ -25,17 +25,17 @@
         </div>
         <div class="main-content">
             <ul class="catalog-menu">
-                <li><a href="catalog.html">Все книги</a></li>
-                <li><a href="rusclassic.html">Русская классика</a></li>
-                <li><a href="amclassic.html">Американская классика</a></li>
+                <li><a href="/catalog">Все книги</a></li>
+                <li><a href="/rusclassic">Русская классика</a></li>
+                <li><a href="/amclassic">Американская классика</a></li>
             </ul>
             <div>
 
                 <div class="productinfo">
                     <div>
 
-                        <a href="images/nakaz.jpg" target="_blank">
-                            <img src="images/nakaz.jpg" height="200">
+                        <a href="static/img/nakaz.jpg" target="_blank">
+                            <img src="static/img/nakaz.jpg" height="200">
                         </a>
                     </div>
                     <div>
