--- a/mainapp/templates/mainapp/rusclassic.html
+++ b/mainapp/templates/mainapp/rusclassic.html
@@ -33,22 +33,22 @@
             <div class="row">
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
-                        <a href="capitan.html" class="book-link"><img class="book-img"
-                                                                      src="/static/img/cap.jpg"></a>
+                        <a href="/capitan" class="book-link"><img class="book-img"
+                                                                          src="/static/img/cap.jpg"></a>
                         <h2 class="book-title">Александр Пушкин<br> "Капитанская дочка"</h2>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
-                        <a href="prest_nakaz.html" class="book-link"><img class="book-img"
-                                                                          src="/static/img/nakaz.jpg"></a>
+                        <a href="/prest_nakaz" class="book-link"><img class="book-img"
+                                                                                  src="/static/img/nakaz.jpg"></a>
                         <h2 class="book-title">Фёдор Достоевский<br>"Преступление и наказание"</h2>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
-                        <a href="voyna i mir.html" class="book-link"><img class="book-img"
-                                                                          src="/static/img/2-2.jpg"></a>
+                        <a href="/voyna_i_mir" class="book-link"><img class="book-img"
+                                                                              src="/static/img/2-2.jpg"></a>
                         <h2 class="book-title">Лев Толстой<br>"Война и мир"</h2>
                     </div>
                 </div>
