--- a/mainapp/templates/mainapp/amclassic.html
+++ b/mainapp/templates/mainapp/amclassic.html
@@ -33,21 +33,21 @@
             <div class="row">
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
-                        <a href="mice.html" class="book-link"><img class="book-img" src="/static/img/mice.jpeg"></a>
+                        <a href="/mice" class="book-link"><img class="book-img" src="/static/img/mice.jpeg"></a>
                         <h2 class="book-title">Джон Стейнбек<br>"О мышах и людях"</h2>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
-                        <a href="nadprop.html" class="book-link"><img class="book-img"
-                                                                      src="/static/img/nadprop.jpg"></a>
+                        <a href="/nadprop" class="book-link"><img class="book-img"
+                                                                          src="/static/img/nadprop.jpg"></a>
                         <h2 class="book-title">Джером Д.Сэлинджер<br>"Над пропастью во ржи"</h2>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
-                        <a href="kill.html" class="book-link"><img class="book-img"
-                                                                   src="/static/img/kill.jpeg"></a>
+                        <a href="/kill" class="book-link"><img class="book-img"
+                                                                       src="/static/img/kill.jpeg"></a>
                         <h2 class="book-title">Харпер Ли<br>"Убить пересмешника"</h2>
                     </div>
                 </div>
