--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -38,7 +38,7 @@
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
                         <a href="/capitan" class="book-link"><img class="book-img"
-                                                                  src="/static/img/book.png"></a>
+                                                                  src="{{ product.cover.url }}"></a>
                         <h2 class="book-title">{{ product.author }}<br>{{ product.title }}</h2>
                     </div>
                 </div>
