book category list

--- a/mainapp/templates/mainapp/amclassic.html
+++ b/mainapp/templates/mainapp/amclassic.html
@@ -27,7 +27,7 @@
         <h1 class="title-catalog">Что у нас можно купить</h1>
         <ul class="catalog-menu">
             <li><a href="/catalog">Все книги</a></li>
-            <li><a href="/amclassic">Американская классика</a></li>
+            <li><a href="/amclassic">{{ category }}</a></li>
         </ul>
         <div class="common-book">
             <div class="row">
