--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -28,7 +28,7 @@
         <ul class="catalog-menu">
             <li><a href="/catalog">Все книги</a></li>
             {% for category in categories %}
-            <li><a href="TODO">{{ category }}</a></li>
+            <li><a href="/amclassic">{{ category }}</a></li>
             {% endfor %}
         </ul>
         <div class="common-book">
