--- a/mainapp/templates/mainapp/book.html
+++ b/mainapp/templates/mainapp/book.html
@@ -34,10 +34,10 @@
 
                 <div class="productinfo">
                     <div>
-
+                        <a href="{% url 'basket:add' book.pk %}">
 
                             <img src="{{ book.cover.url }}" height="200">
-
+                        </a>
                     </div>
                     <div>
                         <h2 class="title">{{ book.author }} "{{ book.title }}"</h2>
