--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -38,7 +38,7 @@
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
                         <a href="{% url 'book' product.id %}" class="book-link"><img class="book-img"
-                                                                  src="{{ product.cover.url }}"></a>
+                                                                                     src="{{ product.cover.url }}"></a>
                         <h2 class="book-title">{{ product.author }}<br>{{ product.title }}</h2>
                     </div>
                 </div>
@@ -47,33 +47,35 @@
             {% endfor %}
 
 
-
+            <h2> Горячее предложение</h2>
             <div class="row">
 
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
                         <a href="{% url 'book' hot_product.id %}" class="book-link"><img class="book-img"
-                                                                  src="{{ hot_product.cover.url }}"></a>
+                                                                                         src="{{ hot_product.cover.url }}"></a>
                         <h2 class="book-title">{{ hot_product.author }}<br>{{ hot_product.title }}</h2>
                     </div>
                 </div>
-
+            </div>
+            <h2> Похожие книги</h2>
+            <div class="row">
                 {% for product in same_products %}
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
                         <a href="{% url 'book' product.id %}" class="book-link"><img class="book-img"
-                                                                  src="{{ product.cover.url }}"></a>
+                                                                                     src="{{ product.cover.url }}"></a>
                         <h2 class="book-title">{{ product.author }}<br>{{ product.title }}</h2>
                     </div>
                 </div>
                 {% endfor %}
             </div>
-
-
-
         </div>
-        {% include "mainapp/includes/inc_footer.html" %}
+
+
     </div>
+    {% include "mainapp/includes/inc_footer.html" %}
+</div>
 </div>
 </body>
 </html>
