--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -48,7 +48,7 @@
 
 
             <h2> Горячее предложение</h2>
-            <div class="row">
+            <div class="row-hot">
 
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <h2> Похожие книги</h2>
-            <div class="row">
+            <div class="row-same">
                 {% for product in same_products %}
                 <div class="col-xl-3 col-md-4 col-sm-6">
                     <div class="book-item">
