--- a/basketapp/templates/basketapp/base.html
+++ b/basketapp/templates/basketapp/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static
 'fonts/font-awesome/css/font-awesome.css' %}">
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/basket_scripts.js' %}"></script>
     {% endblock %}
     {% block js %}
     {% endblock %}
