--- a/adminapp/templates/adminapp/products.html
+++ b/adminapp/templates/adminapp/products.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="products_list">
     <button class="new_product">
-        <a href="{% url 'admin:product_create' category.pk %}">
+        <a href="{% url 'adminka:product_create' category.pk %}">
         новый продукт
         </a>
     </button>
@@ -17,17 +17,17 @@
         </div>
         <div class="product_actions">
             <button>
-                <a href="{% url 'admin:product_read' object.pk %}">
+                <a href="{% url 'adminka:product_read' object.pk %}">
                 подробнее
                 </a>
             </button>
             <button>
-                <a href="{% url 'admin:product_update' object.pk %}">
+                <a href="{% url 'adminka:product_update' object.pk %}">
                 редактировать
                 </a>
             </button>
             <button>
-                <a href="{% url 'admin:product_delete' object.pk %}">
+                <a href="{% url 'adminka:product_delete' object.pk %}">
                     удалить
                 </a>
             </button>
