--- a/adminapp/templates/adminapp/categories.html
+++ b/adminapp/templates/adminapp/categories.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="categories_list">
     <button class="new_category">
-        <a href="{% url 'admin:category_create' %}">
+        <a href="{% url 'adminka:category_create' %}">
         новая категория
         </a>
     </button>
@@ -14,17 +14,17 @@
         </div>
         <div class="category_actions">
             <button>
-                <a href="{% url 'admin:products' object.pk %}">
+                <a href="{% url 'adminka:products' object.pk %}">
                 товары категории
                 </a>
             </button>
             <button>
-                <a href="{% url 'admin:category_update' object.pk %}">
+                <a href="{% url 'adminka:category_update' object.pk %}">
                 редактировать
                 </a>
             </button>
             <button>
-                <a href="{% url 'admin:category_delete' object.pk %}">
+                <a href="{% url 'adminka:category_delete' object.pk %}">
                 удалить
                 </a>
             </button>
