fix view basket

--- a/basketapp/templates/basketapp/basket.html
+++ b/basketapp/templates/basketapp/basket.html
@@ -1,6 +1,8 @@
 {% extends 'basketapp/base.html' %}
 {% load staticfiles %}
 {% block content %}
+
+<link rel="stylesheet" href="{% static 'css/work5.css' %}">
 <div class="basket_list">
     {% include 'basketapp/includes/inc_basket_list.html' %}
 </div>
