--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 <html>
-
+<head>
 <link rel="stylesheet" href="{% static 'css/work5.css' %}">
 <link rel="stylesheet" href="{% static 'css/menu.css' %}">
 </head>
