--- a/mainapp/templates/mainapp/includes/inc_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_menu.html
@@ -28,8 +28,12 @@
         <li class="menu-link">
             <a href="{% url 'contacts' %}">Контакты</a>
         </li>
+    </ul>
+</div>
+<div>
+    <ul class="menu">
         <li><a href="{% url 'basket:view' %}" class="basket">
-            {% if basket %}В корзине: {{ basket.0.total_quantity }} шт{% endif %} на стоимость {{ basket.0.total_cost|floatformat:0 }} руб.
+            {% if basket %}В корзине: {{ basket.0.total_quantity }} шт{% endif %} на стоимость {{basket.0.total_cost|floatformat:0 }} руб.
         </a>
         </li>
     </ul>
