--- a/static/css/work5.css
+++ b/static/css/work5.css
@@ -4,15 +4,18 @@
     height: 100%;
 }
 
-
+.logo-mag {
+    width: 150px;
+}
 
 .menu {
-    margin-top: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .menu li {
     font-style: italic;
-    font-size: 20px;
+    font-size: 17px;
     list-style-type: none;
     margin-left: 10px;
     display: inline;
@@ -20,7 +23,7 @@
 
 .menu li a {
     color: black;
-    text-decoration: none
+    text-decoration: none;
 }
 
 .menu a:hover {
@@ -59,7 +62,8 @@ li {
 
 .logo {
     height: 60px;
-    vertical-align: text-top;
+    float: left;
+    margin-right: 10px;
 }
 
 .footer {
