--- a/basketapp/templates/basketapp/includes/inc_basket_list.html
+++ b/basketapp/templates/basketapp/includes/inc_basket_list.html
@@ -17,7 +17,6 @@
 {% endfor %}
 {% if basket_items %}
 <div class="basket_summary">
-    В корзине {{ basket_items.0.total_quantity }} товаров общей стоимостью
-    {{ basket_items.0.total_cost }} руб
+    В корзине {{ basket_items.0.total_quantity }} товаров общей стоимостью {{ basket_items.0.total_cost }} руб
 </div>
 {% endif %}
