--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -14,6 +14,11 @@
         зарегистрироваться
     </a>
 </button>
+<button class="btn btn-round form-control">
+    <a href="{% url 'social:begin' 'google-oauth2' %}?next=/">
+        Google+ sign in
+    </a>
+</button>
 
 {% csrf_token %}
 {% if next %}
