--- a/ordersapp/templates/ordersapp/base.html
+++ b/ordersapp/templates/ordersapp/base.html
@@ -2,24 +2,23 @@
 {% load staticfiles %}
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>
-        {% block title %}
-        {{ title|title }}
-        {% endblock %}
-    </title>
-
-    {% block css %}
-    <link rel="stylesheet" href="{% static 'css/work5.css' %}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
-    {% endblock %}
-    {% block js %}
-    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'js/orders_scripts.js' %}"></script>
-    {% endblock %}
+  <meta charset="utf-8">
+  <title>
+       {% block title %}
+           {{ title|capfirst }}
+       {% endblock %}
+   </title>
+   {% block css %}
+       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+       <link rel="stylesheet" type="text/css" href="{% static 'css/work5.css' %}">
+       <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
+   {% endblock %}
+   {% block js %}
+       <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+       <script src="{% static 'js/bootstrap.min.js' %}"></script>
+   {% endblock %}
 </head>
+
 <body>
 <div class="order_container">
     {% block content %}
