--- a/mainapp/templates/mainapp/includes/inc_footer.html
+++ b/mainapp/templates/mainapp/includes/inc_footer.html
@@ -1,4 +1,4 @@
-        <div class="footer">
+        <div class="footer navbar navbar-default">
             <div class="footer-bottom">
                 <div class="footer-item">
                     <ul class="footer-copy">
