--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -5,27 +5,37 @@
 <head>
     <meta charset="utf-8">
     <title>КНИЖНАЯ КЛАССИКА</title>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
     <link rel="stylesheet" href="{% static 'css/work5.css' %}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-</head>
 
 <body>
 <div class="container">
-    <div class="header">
-        <div class="logo-mag">
-            <a class="logo-link" href="/">
-                <img class="logo" src="/static/img/1.png">
-            </a>
-            Книжная классика
-        </div>
+   <div class="page-header">
+                <h1>Книжная классика <small></small></h1>
 
             {% include "mainapp/includes/inc_menu.html" %}
-        
-    </div>
+            </div>
     <div class="main-content">
-        <h1 class="title-catalog">Что у нас можно купить</h1>
-        <ul class="catalog-menu">
+        <div class="page-header">
+  <h1><small>Что у нас есть</small></h1>
+</div>
+</div>
+        <ul class="navbar navbar-default">
+            <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+        </div>
             <li><a href="{% url 'catalog' %}">Все книги</a></li>
             {% for category in categories %}
             <li><a href="{% url 'catalog-list' category.id %}">{{ category }}</a></li>
