--- a/mainapp/templates/mainapp/includes/inc_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_menu.html
@@ -1,73 +1,53 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">
+                    <img class="logo" src="/static/img/1.png"></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
 
 
-    <div>
-    <ul class="menu">
-        {% if user.is_authenticated %}
-        <li>
-            <a href="{% url 'auth:edit' %}">
-                {{ user.first_name|default:'Пользователь' }}
-            </a>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ user.first_name|default:'Пользователь' }} <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{% url 'auth:edit' %}">профиль</a></li>
+            <li><a href="{% url 'ordersapp:orders_list' %}">заказы</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+
+
+          </ul>
         </li>
-        {% endif %}
-        {% if user.is_superuser %}
-        <li>
-            <a href="{% url 'adminka:users' %}">админка</a>
-        </li>
-        {% endif %}
-        <li>
-            {% if user.is_authenticated %}
+        <li>{% if user.is_authenticated %}
             <a href="{% url 'auth:logout' %}">выйти</a>
             {% else %}
             <a href="{% url 'auth:login' %}">войти</a>
-            {% endif %}
-        </li>
-    </ul>
-    </div>
-
-
-        <div>
-            <ul class="menu">
-        <li>
-            <a href="{% url 'main' %}">Главная</a>
-        </li>
-        <li>
-            <a href="{% url 'catalog' %}">Каталог</a>
-        </li>
-        <li>
-            <a href="{% url 'contacts' %}" class="{% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
-       Контакты
-   </a>
-        </li>
-    {% if user.is_authenticated %}
-        <li>
-
-            <div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    {{ user.first_name|default:'Пользователь' }}
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-      <li>
-          <a href="{% url 'auth:edit' %}">профиль</a>
-      </li>
-      <li>
-          <a href="{% url 'ordersapp:orders_list' %}">заказы</a>
-      </li>
-  </ul>
-</div>
-
-
-
-        </li>
-    {% endif %}
-    </ul>
-
-<div>
-    <ul class="menu">
-        <li><a href="{% url 'basket:view' %}" class="basket">
-            В корзине: {{ basket.0.total_quantity }} шт на стоимость {{basket.0.total_cost|floatformat:0 }} руб.
-        </a>
-        </li>
-    </ul>
-</div>
-</div>
+            {% endif %}</li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="{% url 'main' %}">Главная</a></li>
+          <li><a href="{% url 'catalog' %}">Каталог</a></li>
+          <li><a href="{% url 'adminka:users' %}">админка</a></li>
+              </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
