--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -18,9 +18,9 @@
     <div class="container">
 
             <div class="page-header">
-                <h1>Книжная классика <small>Лучшие книги по лучшей цене</small></h1>
+                <h1>Книжная классика <small></small></h1>
 
-            {% include "mainapp/includes/inc_menu_2.html" %}
+            {% include "mainapp/includes/inc_menu.html" %}
             </div>
         <hr>
         <h2>Приветствуем, {{ username | default_if_none:"%юзернейм%" | title }}</h2>
