--- a/static/css/work5.css
+++ b/static/css/work5.css
@@ -61,14 +61,13 @@ li {
 
 
 .logo {
-    height: 60px;
+    height: 50px;
     float: left;
     margin-right: 10px;
 }
 
 .footer {
     height: 210px;
-    background-color: rgb(243, 239, 239);
     text-align: left;
     padding: 10px;
     display: flex;
@@ -208,7 +207,7 @@ textarea {
 .footer-top .footer-item {
     margin: 8px;
     width: 50px;
-    border: #000000;
+    border: #C0C0C0;
     border-style: solid;
     border-width: 1px;
 }
@@ -292,4 +291,11 @@ textarea {
     font-size: 30px;
 }
 
+.navbar-brand {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
+.navbar-brand .logo {
+    height: 30px;
+}
