--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -25,7 +25,7 @@
   <h1><small>Что у нас есть</small></h1>
 </div>
 </div>
-        <ul class="navbar navbar-default">
+        <nav class="navbar navbar-default">
             <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -36,56 +36,37 @@
         <span class="icon-bar"></span>
       </button>
         </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
             <li><a href="{% url 'catalog' %}">Все книги</a></li>
             {% for category in categories %}
             <li><a href="{% url 'catalog-list' category.id %}">{{ category }}</a></li>
             {% endfor %}
         </ul>
-        <div class="common-book">
-            {% for row in rows_of_products %}
-            <div class="row">
-                {% for product in row %}
-                <div class="col-xl-3 col-md-4 col-sm-6">
-                    <div class="book-item">
-                        <a href="{% url 'book' product.id %}" class="book-link"><img class="book-img"
-                                                                                     src="{{ product.cover.url }}"></a>
-                        <h2 class="book-title">{{ product.author }}<br>{{ product.title }}</h2>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-            {% endfor %}
 
-
-            <h2> Горячее предложение</h2>
-            <div class="row-hot">
-
-                <div class="col-xl-3 col-md-4 col-sm-6">
-                    <div class="book-item">
-                        <a href="{% url 'book' hot_product.id %}" class="book-link"><img class="book-img"
-                                                                                         src="{{ hot_product.cover.url }}"></a>
-                        <h2 class="book-title">{{ hot_product.author }}<br>{{ hot_product.title }}</h2>
-                    </div>
                 </div>
             </div>
-            <h2> Похожие книги</h2>
-            <div class="row-same">
-                {% for product in same_products %}
-                <div class="col-xl-3 col-md-4 col-sm-6">
-                    <div class="book-item">
-                        <a href="{% url 'book' product.id %}" class="book-link"><img class="book-img"
-                                                                                     src="{{ product.cover.url }}"></a>
-                        <h2 class="book-title">{{ product.author }}<br>{{ product.title }}</h2>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
+        </nav>
+</div>
 
 
+{% for row in rows_of_products %}
+<div class="row">
+    {% for product in row %}
+  <div class="col-xs-6 col-md-3">
+    <div class="thumbnail">
+      <a href="{% url 'book' product.id %}"><img class="book-img" src="{{ product.cover.url }}"></a>
+      <div class="caption">
+        <h3>{{ product.author }}<br>{{ product.title }}</h3>
+        <p>...</p>
+        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
     </div>
-    {% include "mainapp/includes/inc_footer.html" %}
+
+  </div>
+    {% endfor %}
 </div>
-</div>
+{% endfor %}
+
 </body>
-</html>
+
